# weather-gui

./: .gitignore  Cargo.toml  main.py  pyproject.toml  pyvenv.cfg
.github/workflows/: CI.yml
documentation/: Structure Diagram.drawio  Weather Documentation.md
src/: lib.rs
